src/prompts/snapshots/promptuity__prompts__number__tests__default.snap
---
source: src/prompts/number.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): 100| 
body(none):
