src/prompts/snapshots/promptuity__prompts__number__tests__hint.snap
---
source: src/prompts/number.rs
---
state: Active
message: test message
hint: hint message
placeholder: none
input(cursor): | 
body(none):
