src/prompts/snapshots/promptuity__prompts__number__tests__increment_decrement.snap
---
source: src/prompts/number.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): | 
body(none):
---
state: Active
input(cursor): 1| 
body(none):
---
state: Active
input(cursor): 10| 
body(none):
---
state: Active
input(cursor): 4| 
body(none):
---
state: Active
input(cursor): 3| 
body(none):
---
state: Active
input(cursor): | 
body(none):
---
state: Active
input(cursor): 1| 
body(none):
---
state: Active
input(cursor): 2| 
body(none):
---
state: Active
input(cursor): 3| 
body(none):
