src/prompts/snapshots/promptuity__prompts__number__tests__invalid_format.snap
---
source: src/prompts/number.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): | 
body(none):
---
state: Active
input(cursor): -| 
body(none):
---
state: Error(Invalid number.)
input(cursor): -| 
body(none):
