src/prompts/snapshots/promptuity__prompts__number__tests__max_value.snap
---
source: src/prompts/number.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): | 
body(none):
---
state: Active
input(cursor): 3| 
body(none):
---
state: Error(Must be a number between -9223372036854775808 and 2.)
input(cursor): 3| 
body(none):
---
state: Active
input(cursor): | 
body(none):
---
state: Active
input(cursor): 2| 
body(none):
---
state: Submit
input(raw): 2
body(none):
