src/prompts/snapshots/promptuity__prompts__number__tests__non_required_empty_submit.snap
---
source: src/prompts/number.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): | 
body(none):
---
state: Error(Invalid number.)
input(cursor): | 
body(none):
