src/prompts/snapshots/promptuity__prompts__number__tests__placeholder.snap
---
source: src/prompts/number.rs
---
state: Active
message: test message
hint: none
placeholder: placeholder message
input(cursor): | 
body(none):
