src/prompts/snapshots/promptuity__prompts__number__tests__required_error.snap
---
source: src/prompts/number.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): | 
body(none):
---
state: Error(This field is required.)
input(cursor): | 
body(none):
